--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -44,7 +44,7 @@
 
     <main>
         <section>
-            <h1 class="dinner">¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
+            <h1 >¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
             <div class="wrap-title-section1">
                 <h2>PASTAS</h2>
             </div>
