--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./../css/style.css" />
+    <link rel="stylesheet" href="./css/styles.css">
 
     <title>RED WINE | Inicio</title>
 </head>
@@ -35,7 +35,7 @@ background-size: cover;
                 <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="./../index.html">INICIO</a>
+                            <a class="nav-link " aria-current="page" href="index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./../pages/contacto.html">CONTACTO</a>
