--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <title>RED WINE | Inicio</title>
 </head>
@@ -26,7 +26,7 @@ background-size: cover;
     <header >
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
-                <a class="logo" href="#"><img src="./../imgs/red_wine.jpg" alt="red wine"></a>
+                <a class="logo" href="#"><img src="./imgs/red_wine.jpg" alt="red wine"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -60,13 +60,13 @@ background-size: cover;
             <div style="margin-top: 40px; margin-bottom: 40px;"></div>
         <div class="botones">
             <a href="./pages/almuerzos_y_cenas.html">
-                <img src="imgs/almuerzos_cenas.jpg" alt="almuerzos_cenas" />
+                <img src="./imgs/almuerzos_cenas.jpg" alt="almuerzos_cenas" />
             </a>
         </div>
 
         <div class="botones">
             <a href="./pages/desayunos_y_meriendas.html">
-                <img src="imgs/desayunos_meriendas.jpg" alt="desayunos_meriendas" />
+                <img src="./imgs/desayunos_meriendas.jpg" alt="desayunos_meriendas" />
             </a>
         </div>
 
