--- a/pages/reserva_tu_mesa.html
+++ b/pages/reserva_tu_mesa.html
@@ -7,7 +7,7 @@
         <!--LINK BOOTSTRAP-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./../css/style.css">
+    <link rel="stylesheet" href="./../css/styles.css">
     <title>RESERVA TU MESA</title>
 
 </head>
@@ -29,7 +29,7 @@
                             <a class="nav-link " aria-current="page" href="./../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./../pages/contacto.html">CONTACTO</a>
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://maps.app.goo.gl/v4QT4uVWczSe4Vby8 ">UBICACION</a>
