cambios generales en el footer

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     <title>RED WINE | Inicio</title>
 </head>
 
-<body  style="
+<body style="
 background-image: url(./../imgs/CONTACTANOS_RED.jpg);
 background-size: cover;
 ">
-    <header >
+    <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
                 <a class="logo" href="#"><img src="./imgs/red_wine.jpg" alt="red wine"></a>
@@ -51,47 +52,52 @@ background-size: cover;
 
     <main>
         <section class="container-index">
-        <h1 class="h1"><span class="red-text">RED</span> <span class="white-text">WINE</span></h1>
-        <div class="moment">
-            <h3>¡COMPARTÍ BUENOS MOMENTOS!</h3>
-        </div>
+            <h1 class="h1"><span class="red-text">RED</span> <span class="white-text">WINE</span></h1>
+            <div class="moment">
+                <h3>¡COMPARTÍ BUENOS MOMENTOS!</h3>
+            </div>
 
-        <article class="content-home">
-            <div style="margin-top: 40px; margin-bottom: 40px;"></div>
-        <div class="botones">
-            <a href="./pages/almuerzos_y_cenas.html">
-                <img src="./imgs/almuerzos_cenas.jpg" alt="almuerzos_cenas" />
-            </a>
-        </div>
+            <article class="content-home">
+                <div style="margin-top: 40px; margin-bottom: 40px;"></div>
+                <div class="botones">
+                    <a href="./pages/almuerzos_y_cenas.html">
+                        <img src="./imgs/almuerzos_cenas.jpg" alt="almuerzos_cenas" />
+                    </a>
+                </div>
 
-        <div class="botones">
-            <a href="./pages/desayunos_y_meriendas.html">
-                <img src="./imgs/desayunos_meriendas.jpg" alt="desayunos_meriendas" />
-            </a>
-        </div>
+                <div class="botones">
+                    <a href="./pages/desayunos_y_meriendas.html">
+                        <img src="./imgs/desayunos_meriendas.jpg" alt="desayunos_meriendas" />
+                    </a>
+                </div>
 
-        <div class="botones">
-            <a href="./pages/reserva_tu_mesa.html">
-                <img src="imgs/reservar.jpg" alt="reserva_mesa" />
-            </a>
-        </div>
-        </article>
+                <div class="botones">
+                    <a href="./pages/reserva_tu_mesa.html">
+                        <img src="imgs/reservar.jpg" alt="reserva_mesa" />
+                    </a>
+                </div>
+            </article>
         </section>
     </main>
 
-    <footer>
-        <div class="footer-link">
-            <a href="https://api.whatsapp.com/send?phone=3532416670" class="mi_enlace" target="_blank">WHATSAPP</a>
-            <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" class="mi_enlace" target="_blank">¡MI
-                INSTAGRAM!</a>
-        </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-row">
+                <div class="social-links">
+                <h4>Redes Sociales</h4>
+                    <a href="https://api.whatsapp.com/send?phone=3532416670" ><li class="fab fa-whatsapp"></li></a>
+                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" ><i class="fab fa-instagram"></i></a>
+                </div>
 
-        <div>
-            <p class="cypdp">Condiciones y Politicas de Privacidad</p>
-        </div>
 
-        <div class="logo2">
-            <img src="./../imgs/red_wine.jpg" alt="red wine" />
+
+
+
+
+                <div class="logo2">
+                    <img src="./../imgs/red_wine.jpg" alt="red wine" />
+                </div>
+            </div>
         </div>
     </footer>
     <!--SCRIPT DE BOOTSTRAP-->
