--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -8,6 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./../css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>DESAYUNOS Y MERIENDAS</title>
 </head>
 
@@ -322,20 +323,19 @@
         </section>
     </main>
 
-    <footer>
-        <div class="footer-link">
-            <a href="https://api.whatsapp.com/send?phone=3532416670" class="mi_enlace" target="_blank">WHATSAPP</a>
-            <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" class="mi_enlace" target="_blank">¡MI
-                INSTAGRAM!</a>
-            <a href="tw" class="mi_enlace" target="_blank"></a>
-        </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-row">
+                <div class="social-links">
+                <h4>Redes Sociales</h4>
+                    <a href="https://api.whatsapp.com/send?phone=3532416670" ><li class="fab fa-whatsapp"></li></a>
+                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" ><i class="fab fa-instagram"></i></a>
+                </div>
 
-        <div>
-            <p>Condiciones y Politicas de Privacidad</p>
-        </div>
-
-        <div class="logo2">
-            <img src="./../imgs/red_wine.jpg" alt="red wine" />
+                <div class="logo2">
+                    <img src="./../imgs/red_wine.jpg" alt="red wine" />
+                </div>
+            </div>
         </div>
     </footer>
         <!--SCRIPT DE BOOTSTRAP-->
