--- a/index.html
+++ b/index.html
@@ -84,16 +84,13 @@ background-size: cover;
         <div class="footer-container">
             <div class="footer-row">
                 <div class="social-links">
-                <h4>Redes Sociales</h4>
-                    <a href="https://api.whatsapp.com/send?phone=3532416670" ><li class="fab fa-whatsapp"></li></a>
-                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" ><i class="fab fa-instagram"></i></a>
+                    <h4>Redes Sociales</h4>
+                    <a href="https://api.whatsapp.com/send?phone=3532416670">
+                        <li class="fab fa-whatsapp"></li>
+                    </a>
+                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw=="><i
+                            class="fab fa-instagram"></i></a>
                 </div>
-
-
-
-
-
-
                 <div class="logo2">
                     <img src="./../imgs/red_wine.jpg" alt="red wine" />
                 </div>
