--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!--LINK BOOTSTRAP-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!--LINK BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./../css/styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -47,9 +47,9 @@
 
     <main>
         <section class="form-section">
-        <h1 class="h1">¡CONTACTO!</h1>
-        <h3 class="msj">ENVÍENOS SU MENSAJE</h3>
-        <h4 class="msj">Nos encantaria saber de usted</h4>
+            <h1 class="h1">¡CONTACTO!</h1>
+            <h3 class="msj">ENVÍENOS SU MENSAJE</h3>
+            <h4 class="msj">Nos encantaria saber de usted</h4>
 
 
             <form class="formulario">
@@ -60,14 +60,13 @@
                     <input type="email" placeholder="email@xample.com" required />
                 </div>
                 <div class="input-form">
-                    <input type="text" placeholder="ASUNTO" required  />
+                    <input type="text" placeholder="ASUNTO" required />
                 </div>
                 <div class="input-form">
-                    <textarea class="msj_form" name="MENSAJE" cols="70" rows="10"
-                        placeholder="MENSAJE"></textarea>
+                    <textarea class="msj_form" name="MENSAJE" cols="70" rows="10" placeholder="MENSAJE"></textarea>
                 </div>
                 <div class="input-form">
-                    <input class="enviar" type="submit" placeholder="ENVIAR"  />
+                    <input class="enviar" type="submit" placeholder="ENVIAR" />
                 </div>
 
             </form>
@@ -78,9 +77,12 @@
         <div class="footer-container">
             <div class="footer-row">
                 <div class="social-links">
-                <h4>Redes Sociales</h4>
-                    <a href="https://api.whatsapp.com/send?phone=3532416670" ><li class="fab fa-whatsapp"></li></a>
-                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" ><i class="fab fa-instagram"></i></a>
+                    <h4>Redes Sociales</h4>
+                    <a href="https://api.whatsapp.com/send?phone=3532416670">
+                        <li class="fab fa-whatsapp"></li>
+                    </a>
+                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw=="><i
+                            class="fab fa-instagram"></i></a>
                 </div>
 
                 <div class="logo2">
@@ -89,8 +91,8 @@
             </div>
         </div>
     </footer>
-        <!--SCRIPT DE BOOTSTRAP-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    <!--SCRIPT DE BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
