--- a/pages/reserva_tu_mesa.html
+++ b/pages/reserva_tu_mesa.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--LINK BOOTSTRAP-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!--LINK BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -61,7 +61,7 @@
         </a>
 
         <p class="saludo_ws">Hola!</p>
-        
+
 
     </main>
 
@@ -69,9 +69,12 @@
         <div class="footer-container">
             <div class="footer-row">
                 <div class="social-links">
-                <h4>Redes Sociales</h4>
-                    <a href="https://api.whatsapp.com/send?phone=3532416670" ><li class="fab fa-whatsapp"></li></a>
-                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" ><i class="fab fa-instagram"></i></a>
+                    <h4>Redes Sociales</h4>
+                    <a href="https://api.whatsapp.com/send?phone=3532416670">
+                        <li class="fab fa-whatsapp"></li>
+                    </a>
+                    <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw=="><i
+                            class="fab fa-instagram"></i></a>
                 </div>
 
                 <div class="logo2">
@@ -80,7 +83,7 @@
             </div>
         </div>
     </footer>
-        <!--SCRIPT DE BOOTSTRAP-->
+    <!--SCRIPT DE BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
