--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -10,6 +10,8 @@
     <!-- <link rel="stylesheet" href="./../css/styles.css" /> -->
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- LINK ANIMACIONES -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>ALMUERZOS Y CENAS</title>
 </head>
 
@@ -63,7 +65,9 @@
             <!-- CONTENEDOR-->
             <div class="wrap_column-1_carta">
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/tallarines.jpg" alt="tallarines" />
                     <div class="title-plato-carta">
                         <h3 class="h3">TALLARINES</h3>
@@ -75,7 +79,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/lasagna.jpg" alt="lasagna" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LASAGNA</h3>
@@ -87,7 +93,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1"data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/ravioles.jpg" alt="ravioles" />
                     <div class="title-plato-carta">
                         <h3 class="h3">RAVIOLES</h3>
@@ -99,7 +107,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/sorrentinos.jpg" alt="sorrentinos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">SORRENTINOS</h3>
@@ -111,7 +121,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/macarrones.jpg" alt="penne macarrones" />
                     <div class="title-plato-carta">
                         <h3 class="h3">PENNE MACARRONES</h3>
@@ -123,7 +135,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/ñoquis.jpg" alt="ñoquis" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ÑOQUIS</h3>
@@ -156,7 +170,9 @@
             </div>
 
             <div class="wrap_column-1_carta">
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/margarita.jpg" alt="Pizza margarita" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MARGARITA</h3>
@@ -168,7 +184,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1"data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/napolitana.jpg" alt="Pizza napolitana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">NAPOLITANA</h3>
@@ -183,7 +201,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/caprese.jpg" alt="caprese" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CAPRESE</h3>
@@ -198,7 +218,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/4_quesos.jpg" alt="4 quesos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CUATRO QUESOS</h3>
@@ -213,7 +235,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/jyp.jpg" alt="jamon y pimientos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">JAMON Y PIMIENTOS</h3>
@@ -228,7 +252,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/rucula.jpg" alt="rucula" />
                     <div class="title-plato-carta">
                         <h3 class="h3">RUCULA</h3>
@@ -249,7 +275,9 @@
             </div>
 
             <div class="wrap_column-1_carta">
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/mila_napo.jpg" alt="milanesa napolitana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">NAPOLITANA</h3>
@@ -264,7 +292,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/mila_rellena.jpg" alt="milanesa rellena" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MILANESA RELLENA</h3>
@@ -278,7 +308,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/entraña.jpg" alt="entraña con verduras" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ENTRAÑA GRILLADA</h3>
@@ -293,7 +325,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/mila_caballo.jpg" alt="milanesa de pollo a caballo" />
                     <div class="title-plato-carta">
                         <h3 class="h3">A CABALLO</h3>
@@ -308,7 +342,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/pollo_grille.jpg" alt="pollo a la plancha" />
                     <div class="title-plato-carta">
                         <h3 class="h3">POLLO GRILLE ACOMPAÑADO</h3>
@@ -323,7 +359,9 @@
                 </div>
 
 
-                <div class="plato-carta1">
+                <div class="plato-carta1" data-aos="flip-left"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000">
                     <img src="./../imgs/suprema.jpg" alt="suprema" />
                     <div class="title-plato-carta">
                         <h3 class="h3">SUPREMA</h3>
@@ -359,6 +397,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <!-- SCRIPT ANIMACIONES -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
