--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -10,6 +10,8 @@
     <!-- <link rel="stylesheet" href="./../css/styles.css" /> -->
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!-- LINK ANIMACIONES -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>DESAYUNOS Y MERIENDAS</title>
 </head>
 
@@ -62,7 +64,9 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/cafe.jpg " alt="d_tradicional" />
                     <div class="title-plato-carta">
                         <h3 class="h3">TRADICIONAL</h3>
@@ -77,7 +81,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800">
                     <img src="./../imgs/campestreejpg.jpg " alt="d_campestre" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CAMPESTRE</h3>
@@ -91,7 +97,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800">
                     <img src="./../imgs/liviano.jpg " alt="d_liviano" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LIVIANO</h3>
@@ -114,7 +122,9 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800">
                     <img src="./../imgs/criollos.jpg" alt="Criollos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CRIOLLO</h3>
@@ -126,7 +136,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800">
                     <img src="./../imgs/medialunas.jpg" alt="Medialuna" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MEDIALUNA</h3>
@@ -138,7 +150,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800">
                     <img src="./../imgs/maicena.jpg" alt="Alfajor de maicena" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ALFAJOR DE MAICENA</h3>
@@ -149,7 +163,9 @@
                     </div>
                 </div>
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800">
                     <img src="./../imgs/chipa.jpg" alt="Chipa" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHIPÁ</h3>
@@ -170,7 +186,9 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/tostado.jpg " alt="sandwich clasico" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CLÁSICO</h3>
@@ -182,7 +200,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/bondiola.jpg " alt="sandwich bondiola" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BONDIOLA</h3>
@@ -193,7 +213,9 @@
                     </div>
                 </div>
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/proteico.jpg" alt="sandwich proteico" />
                     <div class="title-plato-carta">
                         <h3 class="h3">PROTEICO</h3>
@@ -216,7 +238,9 @@
             </div>
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/cheescake.jpg" alt="cheescake" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHEESCAKE</h3>
@@ -231,7 +255,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/lemon.jpg " alt="lemon pie" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LEMON PIE</h3>
@@ -246,7 +272,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/choco.jpg" alt="chocotorta" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHOCOTORTA</h3>
@@ -261,7 +289,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/brownie.jpg " alt="brownie" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BROWNIE</h3>
@@ -281,7 +311,9 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/banana.jpg" alt="licuado banana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BANANA</h3>
@@ -293,7 +325,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/duraznoo.jpg" alt="licuado durazno" />
                     <div class="title-plato-carta">
                         <h3 class="h3">DURAZNO</h3>
@@ -305,7 +339,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/frutilla.jpg" alt="licuado frutilla" />
                     <div class="title-plato-carta">
                         <h3 class="h3">FRUTILLA</h3>
@@ -317,7 +353,9 @@
                 </div>
 
 
-                <div class="plato-carta">
+                <div class="plato-carta" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="800" >
                     <img src="./../imgs/oreo.jpg" alt="MILK SHAKE" />
                     <div class="title-plato-carta">
                         <h3 class="h3">OREO MILKSHAKE</h3>
@@ -355,6 +393,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <!-- SCRIPTS ANIMACIONES -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 
 </html>
