Reformas generales y agregados para el SEO

--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- LINK ANIMACIONES -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="Description" content="Seccion donde encontraras nuestro menu con el servicio gastronomico que tenemos para ofrecer con respecto a los almuerzos y cenas">
+    <meta name="Keywords" content="MENU, ALMUERZOS, CENAS, COMIDA, GASTRONOMIA,">
     <title>ALMUERZOS Y CENAS</title>
 </head>
 
@@ -57,7 +59,7 @@
 
     <main class="main_alm">
         <section>
-            <h1 >¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
+            <h1>¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
             <div class="wrap-title-section1">
                 <h2>PASTAS</h2>
             </div>
@@ -65,9 +67,8 @@
             <!-- CONTENEDOR-->
             <div class="wrap_column-1_carta">
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/tallarines.jpg" alt="tallarines" />
                     <div class="title-plato-carta">
                         <h3 class="h3">TALLARINES</h3>
@@ -79,9 +80,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/lasagna.jpg" alt="lasagna" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LASAGNA</h3>
@@ -93,9 +93,8 @@
                 </div>
 
 
-                <div class="plato-carta1"data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/ravioles.jpg" alt="ravioles" />
                     <div class="title-plato-carta">
                         <h3 class="h3">RAVIOLES</h3>
@@ -107,9 +106,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/sorrentinos.jpg" alt="sorrentinos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">SORRENTINOS</h3>
@@ -121,9 +119,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/macarrones.jpg" alt="penne macarrones" />
                     <div class="title-plato-carta">
                         <h3 class="h3">PENNE MACARRONES</h3>
@@ -135,9 +132,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/ñoquis.jpg" alt="ñoquis" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ÑOQUIS</h3>
@@ -170,9 +166,8 @@
             </div>
 
             <div class="wrap_column-1_carta">
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/margarita.jpg" alt="Pizza margarita" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MARGARITA</h3>
@@ -184,9 +179,8 @@
                 </div>
 
 
-                <div class="plato-carta1"data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/napolitana.jpg" alt="Pizza napolitana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">NAPOLITANA</h3>
@@ -201,9 +195,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/caprese.jpg" alt="caprese" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CAPRESE</h3>
@@ -218,9 +211,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/4_quesos.jpg" alt="4 quesos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CUATRO QUESOS</h3>
@@ -235,9 +227,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/jyp.jpg" alt="jamon y pimientos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">JAMON Y PIMIENTOS</h3>
@@ -252,9 +243,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/rucula.jpg" alt="rucula" />
                     <div class="title-plato-carta">
                         <h3 class="h3">RUCULA</h3>
@@ -275,9 +265,8 @@
             </div>
 
             <div class="wrap_column-1_carta">
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/mila_napo.jpg" alt="milanesa napolitana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">NAPOLITANA</h3>
@@ -292,9 +281,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/mila_rellena.jpg" alt="milanesa rellena" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MILANESA RELLENA</h3>
@@ -308,9 +296,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/entraña.jpg" alt="entraña con verduras" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ENTRAÑA GRILLADA</h3>
@@ -325,9 +312,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/mila_caballo.jpg" alt="milanesa de pollo a caballo" />
                     <div class="title-plato-carta">
                         <h3 class="h3">A CABALLO</h3>
@@ -342,9 +328,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/pollo_grille.jpg" alt="pollo a la plancha" />
                     <div class="title-plato-carta">
                         <h3 class="h3">POLLO GRILLE ACOMPAÑADO</h3>
@@ -359,9 +344,8 @@
                 </div>
 
 
-                <div class="plato-carta1" data-aos="flip-left"
-                data-aos-easing="ease-out-cubic"
-                data-aos-duration="2000">
+                <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">
                     <img src="./../imgs/suprema.jpg" alt="suprema" />
                     <div class="title-plato-carta">
                         <h3 class="h3">SUPREMA</h3>
