--- a/pages/reserva_tu_mesa.html
+++ b/pages/reserva_tu_mesa.html
@@ -10,6 +10,8 @@
     <!-- <link rel="stylesheet" href="./../css/styles.css"> -->
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <meta name="Description" content="Nuestro whatsapp para que hagas la reserva con anticipacion.">
+    <meta name="Keywords" content="Reserva, Mesa, Whatsapp, Mensaje">
     <title>RESERVA TU MESA</title>
 
 </head>
