--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- <link rel="stylesheet" href="./css/styles.css"> -->
-    <link rel="stylesheet" href="css/main.css"> 
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
+    <meta name="Description" content=" Bienvenidos al nuevo restaurant REDWINE, ubicado en Oliva Cordoba, con una amplia variedad de comidas y bebidas. ">
+    <meta name="Keywords" content="RED, WINE, REDWINE, RESTAURANT, COMIDAS, ">
     <title>RED WINE | Inicio</title>
 </head>
 
@@ -101,7 +102,7 @@ background-size: cover;
                             class="fab fa-instagram"></i></a>
                 </div>
                 <div class="logo2">
-                    <img src="./../imgs/red_wine.jpg" alt="red wine" />
+                    <img src="./imgs/red_wine.jpg" alt="red wine" />
                 </div>
             </div>
         </div>
@@ -111,4 +112,5 @@ background-size: cover;
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
