--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,8 @@
     <!-- <link rel="stylesheet" href="./../css/styles.css"> -->
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <meta name="Description" content="Formulario creado para que el cliente nos envie un mensaje o cualquier duda que se le presente, nos pondremos en contacto">
+    <meta name="Keywords" content="Formulario, Contacto, Mensaje, Consulta">
     <title>CONTACTO</title>
 </head>
 
