--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- LINK ANIMACIONES -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="Description" content="Seccion donde encontraras nuestro menu con el servicio gastronomico que tenemos para ofrecer con respecto a desayunos y meriendas">
+    <meta name="Keywords" content="MENU, DESAYUNOS, MERIENDA, COMIDA, GASTRONOMIA,">
     <title>DESAYUNOS Y MERIENDAS</title>
 </head>
 
@@ -56,7 +58,7 @@
 
     <main class="main_des">
         <section>
-            <h1>¡VENÍ Y DISGUSTA LOS MEJORES DESAYUNOS Y MERIENDAS!</h1>
+            <h1>¡VENÍ Y DEGUSTAMOS LOS MEJORES DESAYUNOS Y MERIENDAS!</h1>
             <div class="wrap-title-section">
                 <h2>DESAYUNO COMPLETO</h2>
             </div>
@@ -64,9 +66,7 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/cafe.jpg " alt="d_tradicional" />
                     <div class="title-plato-carta">
                         <h3 class="h3">TRADICIONAL</h3>
@@ -81,9 +81,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800">
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/campestreejpg.jpg " alt="d_campestre" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CAMPESTRE</h3>
@@ -97,9 +95,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800">
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/liviano.jpg " alt="d_liviano" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LIVIANO</h3>
@@ -122,9 +118,7 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800">
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/criollos.jpg" alt="Criollos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CRIOLLO</h3>
@@ -136,9 +130,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800">
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/medialunas.jpg" alt="Medialuna" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MEDIALUNA</h3>
@@ -150,9 +142,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800">
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/maicena.jpg" alt="Alfajor de maicena" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ALFAJOR DE MAICENA</h3>
@@ -163,9 +153,7 @@
                     </div>
                 </div>
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800">
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/chipa.jpg" alt="Chipa" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHIPÁ</h3>
@@ -186,9 +174,7 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/tostado.jpg " alt="sandwich clasico" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CLÁSICO</h3>
@@ -200,9 +186,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/bondiola.jpg " alt="sandwich bondiola" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BONDIOLA</h3>
@@ -213,9 +197,7 @@
                     </div>
                 </div>
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/proteico.jpg" alt="sandwich proteico" />
                     <div class="title-plato-carta">
                         <h3 class="h3">PROTEICO</h3>
@@ -238,9 +220,7 @@
             </div>
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/cheescake.jpg" alt="cheescake" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHEESCAKE</h3>
@@ -255,9 +235,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/lemon.jpg " alt="lemon pie" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LEMON PIE</h3>
@@ -272,9 +250,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/choco.jpg" alt="chocotorta" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHOCOTORTA</h3>
@@ -289,9 +265,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/brownie.jpg " alt="brownie" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BROWNIE</h3>
@@ -311,9 +285,7 @@
 
 
             <div class="wrap_column-2_carta">
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/banana.jpg" alt="licuado banana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BANANA</h3>
@@ -325,9 +297,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/duraznoo.jpg" alt="licuado durazno" />
                     <div class="title-plato-carta">
                         <h3 class="h3">DURAZNO</h3>
@@ -339,9 +309,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/frutilla.jpg" alt="licuado frutilla" />
                     <div class="title-plato-carta">
                         <h3 class="h3">FRUTILLA</h3>
@@ -353,9 +321,7 @@
                 </div>
 
 
-                <div class="plato-carta" data-aos="fade-down"
-                data-aos-easing="linear"
-                data-aos-duration="800" >
+                <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                     <img src="./../imgs/oreo.jpg" alt="MILK SHAKE" />
                     <div class="title-plato-carta">
                         <h3 class="h3">OREO MILKSHAKE</h3>
@@ -393,11 +359,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <!-- SCRIPTS ANIMACIONES -->
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+    <!-- SCRIPTS ANIMACIONES -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
