cambios en el fondo de dym_alm

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,7 +59,7 @@
 
     <main class="main_contacto">
         <section class="form-section">
-            <h1 class="h1">¡CONTACTO!</h1>
+            <h1 class="contact">¡CONTACTO!</h1>
             <h3 class="msj">ENVÍENOS SU MENSAJE</h3>
             <h4 class="msj">Nos encantaria saber de usted</h4>
             <form class="formulario">
