--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -30,22 +30,19 @@
                 <div class="collapse navbar-collapse menu text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item li">
-                            <a class="nav-link " aria-current="page" href="./../index.html">INICIO</a>
+                            <a class="nav-link " href="./../index.html">INICIO</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/contacto.html">CONTACTO</a>
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="https://maps.app.goo.gl/v4QT4uVWczSe4Vby8 ">UBICACION</a>
+                            <a class="nav-link" href="./almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/almuerzos_y_cenas.html">ALMUERZOS</a>
+                            <a class="nav-link" href="./desayunos_y_meriendas.html">DESAYUNOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/desayunos_y_meriendas.html">DESAYUNOS</a>
-                        </li>
-                        <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/reserva_tu_mesa.html">RESERVA</a>
+                            <a class="nav-link" href="./reserva_tu_mesa.html">RESERVA</a>
                         </li>
                     </ul>
 
@@ -69,7 +66,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/tallarines.jpg" alt="tallarines" />
+                    <img src="./../imgs/tallarines.jpg" alt="Tallarines" />
                     <div class="title-plato-carta">
                         <h3 class="h3">TALLARINES</h3>
                         <h4>Tallarines caseros con salsa bolognesa.</h4>
@@ -82,7 +79,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/lasagna.jpg" alt="lasagna" />
+                    <img src="./../imgs/lasagna.jpg" alt="Lasagna" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LASAGNA</h3>
                         <h4>Lasagna con salsa bolognesa.</h4>
@@ -95,7 +92,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/ravioles.jpg" alt="ravioles" />
+                    <img src="./../imgs/ravioles.jpg" alt="Ravioles" />
                     <div class="title-plato-carta">
                         <h3 class="h3">RAVIOLES</h3>
                         <h4>Ravioles con salsa bolognesa.</h4>
@@ -108,7 +105,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/sorrentinos.jpg" alt="sorrentinos" />
+                    <img src="./../imgs/sorrentinos.jpg" alt="Sorrentinos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">SORRENTINOS</h3>
                         <h4>Sorrentinos con salsa bolognesa.</h4>
@@ -121,7 +118,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/macarrones.jpg" alt="penne macarrones" />
+                    <img src="./../imgs/macarrones.jpg" alt="Penne macarrones" />
                     <div class="title-plato-carta">
                         <h3 class="h3">PENNE MACARRONES</h3>
                         <h4>Penne macarrones con salsa bolgnesa.</h4>
@@ -134,7 +131,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/ñoquis.jpg" alt="ñoquis" />
+                    <img src="./../imgs/ñoquis.jpg" alt="Ñoquis" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ÑOQUIS</h3>
                         <h4>Ñoquis con salsa bolognesa.</h4>
@@ -197,7 +194,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/caprese.jpg" alt="caprese" />
+                    <img src="./../imgs/caprese.jpg" alt="Pizza caprese" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CAPRESE</h3>
                         <h4>
@@ -213,7 +210,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/4_quesos.jpg" alt="4 quesos" />
+                    <img src="./../imgs/4_quesos.jpg" alt="Pizza 4 quesos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CUATRO QUESOS</h3>
                         <h4>
@@ -229,7 +226,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/jyp.jpg" alt="jamon y pimientos" />
+                    <img src="./../imgs/jyp.jpg" alt="Pizza jamon y pimientos" />
                     <div class="title-plato-carta">
                         <h3 class="h3">JAMON Y PIMIENTOS</h3>
                         <h4>
@@ -245,7 +242,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/rucula.jpg" alt="rucula" />
+                    <img src="./../imgs/rucula.jpg" alt="Pizza rucula" />
                     <div class="title-plato-carta">
                         <h3 class="h3">RUCULA</h3>
                         <h4>
@@ -267,7 +264,7 @@
             <div class="wrap_column-1_carta">
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/mila_napo.jpg" alt="milanesa napolitana" />
+                    <img src="./../imgs/mila_napo.jpg" alt="Milanesa napolitana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">NAPOLITANA</h3>
                         <h4>
@@ -283,7 +280,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/mila_rellena.jpg" alt="milanesa rellena" />
+                    <img src="./../imgs/mila_rellena.jpg" alt="Milanesa rellena" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MILANESA RELLENA</h3>
                         <h4>
@@ -298,7 +295,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/entraña.jpg" alt="entraña con verduras" />
+                    <img src="./../imgs/entraña.jpg" alt="Entraña con verduras" />
                     <div class="title-plato-carta">
                         <h3 class="h3">ENTRAÑA GRILLADA</h3>
                         <h4>
@@ -314,7 +311,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/mila_caballo.jpg" alt="milanesa de pollo a caballo" />
+                    <img src="./../imgs/mila_caballo.jpg" alt="Milanesa de pollo a caballo" />
                     <div class="title-plato-carta">
                         <h3 class="h3">A CABALLO</h3>
                         <h4>
@@ -330,7 +327,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/pollo_grille.jpg" alt="pollo a la plancha" />
+                    <img src="./../imgs/pollo_grille.jpg" alt="Pollo a la plancha" />
                     <div class="title-plato-carta">
                         <h3 class="h3">POLLO GRILLE ACOMPAÑADO</h3>
                         <h4>
@@ -346,7 +343,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/suprema.jpg" alt="suprema" />
+                    <img src="./../imgs/suprema.jpg" alt="Suprema" />
                     <div class="title-plato-carta">
                         <h3 class="h3">SUPREMA</h3>
                         <h4>Suprema de pollo con guarnicion.</h4>
