--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,10 +15,7 @@
     <title>CONTACTO</title>
 </head>
 
-<body style="
-    background-image: url(../imgs/contactanos_red.jpg);
-    background-size: cover;
-    ">
+<body class="pick_wine">
     <header class="menu">
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
@@ -34,19 +31,16 @@
                             <a class="nav-link " aria-current="page" href="./../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./../pages/contacto.html">CONTACTO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://maps.app.goo.gl/v4QT4uVWczSe4Vby8 ">UBICACION</a>
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/almuerzos_y_cenas.html">ALMUERZOS</a>
+                            <a class="nav-link" href="./almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/desayunos_y_meriendas.html">DESAYUNOS</a>
+                            <a class="nav-link" href="./desayunos_y_meriendas.html">DESAYUNOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/reserva_tu_mesa.html">RESERVA</a>
+                            <a class="nav-link" href="./reserva_tu_mesa.html">RESERVA</a>
                         </li>
                     </ul>
 
