--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -35,17 +35,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://maps.app.goo.gl/v4QT4uVWczSe4Vby8 ">UBICACION</a>
+                        <li class="nav-item li">
+                            <a class="nav-link" href="./almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/almuerzos_y_cenas.html">ALMUERZOS</a>
+                            <a class="nav-link" href="./desayunos_y_meriendas.html">DESAYUNOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/desayunos_y_meriendas.html">DESAYUNOS</a>
-                        </li>
-                        <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/reserva_tu_mesa.html">RESERVA</a>
+                            <a class="nav-link" href="./reserva_tu_mesa.html">RESERVA</a>
                         </li>
                     </ul>
 
@@ -67,7 +64,7 @@
 
             <div class="wrap_column-2_carta">
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/cafe.jpg " alt="d_tradicional" />
+                    <img src="./../imgs/cafe.jpg " alt="Desayuno tradicional" />
                     <div class="title-plato-carta">
                         <h3 class="h3">TRADICIONAL</h3>
                         <h4>
@@ -82,7 +79,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/campestreejpg.jpg " alt="d_campestre" />
+                    <img src="./../imgs/campestreejpg.jpg " alt="Desayuno campestre" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CAMPESTRE</h3>
                         <h4>
@@ -96,7 +93,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/liviano.jpg " alt="d_liviano" />
+                    <img src="./../imgs/liviano.jpg " alt="Desayuno liviano" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LIVIANO</h3>
                         <h4>
@@ -175,7 +172,7 @@
 
             <div class="wrap_column-2_carta">
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/tostado.jpg " alt="sandwich clasico" />
+                    <img src="./../imgs/tostado.jpg " alt="Sandwich clasico" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CLÁSICO</h3>
                         <h4>Tostado de jamon y queso acompañado de papas.</h4>
@@ -187,7 +184,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/bondiola.jpg " alt="sandwich bondiola" />
+                    <img src="./../imgs/bondiola.jpg " alt="Sandwich bondiola" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BONDIOLA</h3>
                         <h4>Pan arabe, bondiola braseada, huevo, queso y papas</h4>
@@ -198,7 +195,7 @@
                 </div>
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/proteico.jpg" alt="sandwich proteico" />
+                    <img src="./../imgs/proteico.jpg" alt="Sandwich proteico" />
                     <div class="title-plato-carta">
                         <h3 class="h3">PROTEICO</h3>
                         <h4>
@@ -221,7 +218,7 @@
 
             <div class="wrap_column-2_carta">
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/cheescake.jpg" alt="cheescake" />
+                    <img src="./../imgs/cheescake.jpg" alt="Cheescake" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHEESCAKE</h3>
                         <h4>
@@ -236,7 +233,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/lemon.jpg " alt="lemon pie" />
+                    <img src="./../imgs/lemon.jpg " alt="Lemon pie" />
                     <div class="title-plato-carta">
                         <h3 class="h3">LEMON PIE</h3>
                         <h4>
@@ -251,7 +248,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/choco.jpg" alt="chocotorta" />
+                    <img src="./../imgs/choco.jpg" alt="Chocotorta" />
                     <div class="title-plato-carta">
                         <h3 class="h3">CHOCOTORTA</h3>
                         <h4>
@@ -266,7 +263,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/brownie.jpg " alt="brownie" />
+                    <img src="./../imgs/brownie.jpg " alt="Brownie" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BROWNIE</h3>
                         <h4>Postre de chocolate y nuez.</h4>
@@ -286,7 +283,7 @@
 
             <div class="wrap_column-2_carta">
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/banana.jpg" alt="licuado banana" />
+                    <img src="./../imgs/banana.jpg" alt="Licuado banana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">BANANA</h3>
                         <h4>Licuado de banana con agua/leche</h4>
@@ -298,7 +295,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/duraznoo.jpg" alt="licuado durazno" />
+                    <img src="./../imgs/duraznoo.jpg" alt="Licuado durazno" />
                     <div class="title-plato-carta">
                         <h3 class="h3">DURAZNO</h3>
                         <h4>Licuado de durazno con agua/leche</h4>
@@ -310,7 +307,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/frutilla.jpg" alt="licuado frutilla" />
+                    <img src="./../imgs/frutilla.jpg" alt="Licuado frutilla" />
                     <div class="title-plato-carta">
                         <h3 class="h3">FRUTILLA</h3>
                         <h4>Licuado de frutilla con agua/leche.</h4>
@@ -322,7 +319,7 @@
 
 
                 <div class="plato-carta" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
-                    <img src="./../imgs/oreo.jpg" alt="MILK SHAKE" />
+                    <img src="./../imgs/oreo.jpg" alt="Milk shake" />
                     <div class="title-plato-carta">
                         <h3 class="h3">OREO MILKSHAKE</h3>
                         <h4>
