--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
     <title>RED WINE | Inicio</title>
 </head>
 
-<body style="
-background-image: url(./imgs/contactanos_red.jpg);
-background-size: cover;
-">
+<body class="pick_wine">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
@@ -42,7 +39,7 @@ background-size: cover;
                             <a class="nav-link " aria-current="page" href="index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./../pages/contacto.html">CONTACTO</a>
+                            <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/almuerzos_y_cenas.html">ALMUERZOS</a>
@@ -67,24 +64,25 @@ background-size: cover;
             <h1 class="h1"><span class="red-text">RED</span> <span class="white-text">WINE</span></h1>
             <div class="momentos">
                 <h3>¡COMPARTÍ BUENOS MOMENTOS!</h3>
+                <!-- <h4>DISFRUTA JUNTO A NOSOTROS UNA DE LAS MEJORES GASTRONOMIAS QUE OFRECE NUESTRO PAIS</h4> -->
             </div>
 
             <article class="content-home">
                 <div class="botones">
                     <a href="./pages/almuerzos_y_cenas.html">
-                        <img src="./imgs/almuerzos_cenas.jpg" alt="almuerzos_cenas" />
+                        <img src="./imgs/almuerzos_cenas.jpg" alt="almuerzos y cenas" />
                     </a>
                 </div>
 
                 <div class="botones">
                     <a href="./pages/desayunos_y_meriendas.html">
-                        <img src="./imgs/desayunos_meriendas.jpg" alt="desayunos_meriendas" />
+                        <img src="./imgs/desayunos_meriendas.jpg" alt="desayunos y meriendas" />
                     </a>
                 </div>
 
                 <div class="botones">
                     <a href="./pages/reserva_tu_mesa.html">
-                        <img src="imgs/reservar.jpg" alt="reserva_mesa" />
+                        <img src="imgs/reservar.jpg" alt="reserva tu mesa" />
                     </a>
                 </div>
             </article>
