--- a/pages/reserva_tu_mesa.html
+++ b/pages/reserva_tu_mesa.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid">
-                <a class="logo" href="#"></a>
+                <a class="logo" href="#"><img src="./../imgs/red_wine.jpg" alt="red wine"></a>
                 <button class="navbar-toggler menu-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -35,17 +35,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://maps.app.goo.gl/v4QT4uVWczSe4Vby8 ">UBICACION</a>
+                        <li class="nav-item li">
+                            <a class="nav-link" href="./almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/almuerzos_y_cenas.html">ALMUERZOS</a>
+                            <a class="nav-link" href="./desayunos_y_meriendas.html">DESAYUNOS</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/desayunos_y_meriendas.html">DESAYUNOS</a>
-                        </li>
-                        <li class="nav-item li">
-                            <a class="nav-link" href="./../pages/reserva_tu_mesa.html">RESERVA</a>
+                            <a class="nav-link" href="./reserva_tu_mesa.html">RESERVA</a>
                         </li>
                     </ul>
 
@@ -57,7 +54,7 @@
     <main class="main_reserva">
 
         <div class="img_wine">
-            <img src="./../imgs/red_wine.jpg" alt="red wine">
+            <img src="./../imgs/red_wine.jpg" alt="Red wine">
         </div>
         <h1 class="h1">RedWine</h1>
         <a class="chat_reserva" href="https://web.whatsapp.com/send/?phone=5493532470635&amp;text=Hola%21"
