--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     </a>
                 </div>
             </article>
+            <!-- <h3>TE DEJAMOS NUESTRA UBICACION PARA CUANDO DESEES VENIR</h3> -->
         </section>
     </main>
 
