--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -56,7 +56,7 @@
 
     <main class="main_alm">
         <section>
-            <h1>¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
+            <h1 class="font_alm">¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
             <div class="wrap-title-section1">
                 <h2>PASTAS</h2>
             </div>
